// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestContext should have a request object for platform amp, origin https://www.bbc.com, isUK, false, statsDestination 598286 & statsPageIdentifier persian.articles.c0000000000o.page 1`] = `
Array [
  <span>
    amp
  </span>,
  <span>
    false
  </span>,
  <span />,
  <span>
    598286
  </span>,
  <span>
    persian.articles.c0000000000o.page
  </span>,
]
`;

exports[`RequestContext should have a request object for platform canonical, origin https://www.bbc.com, isUK, false, statsDestination 598286 & statsPageIdentifier persian.articles.c0000000000o.page 1`] = `
Array [
  <span>
    canonical
  </span>,
  <span>
    false
  </span>,
  <span />,
  <span>
    598286
  </span>,
  <span>
    persian.articles.c0000000000o.page
  </span>,
]
`;

exports[`RequestContext should have a request object for platform default, origin false, isUK, https://www.bbc.co.uk, statsDestination 598286 & statsPageIdentifier persian.articles.c0000000000o.page 1`] = `
Array [
  <span>
    default
  </span>,
  <span>
    false
  </span>,
  <span />,
  <span>
    598286
  </span>,
  <span>
    persian.articles.c0000000000o.page
  </span>,
]
`;

exports[`RequestContext should have a request object for platform default, origin https://www.bbc.com, isUK, false, statsDestination 598286 & statsPageIdentifier persian.articles.c0000000000o.page 1`] = `
Array [
  <span>
    default
  </span>,
  <span>
    false
  </span>,
  <span />,
  <span>
    598286
  </span>,
  <span>
    persian.articles.c0000000000o.page
  </span>,
]
`;
